fixed bugs on safari

--- a/css/button.css
+++ b/css/button.css
@@ -29,6 +29,8 @@
   padding-left: 1.5vw;
   padding-right: 1.5vw;
   cursor: pointer;
+
+  z-index: 1;
 }
 
 #button h2 {
