--- a/css/console.css
+++ b/css/console.css
@@ -5,7 +5,12 @@
 #home {
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  /* use absolute position to show elements above html canvas */
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* this line below fixes the z-index bug of safari*/
+  transform: translate3d(0, 0, 0);
 }
 
 /* console style */
@@ -24,7 +29,9 @@
   white-space: normal;
   position: absolute;
   top: 15%;
+
 }
+
 
 #home.init .console {
   text-shadow: 0px 0px 10px limegreen;
@@ -32,7 +39,6 @@
 
 #home.init .console * {
   color: limegreen;
-  font-family: "Courier New", Courier, monospace !important;
 }
 
 #home .console:hover {
@@ -52,7 +58,7 @@
   transform: rotateY(-10deg);
   transform-origin: right;
   transition: all 0.5s ease;
-  z-index: 0;
+  /* z-index: 0; */
   opacity: 1;
 }
 
@@ -108,6 +114,9 @@
 @keyframes blinker {
   50% {
     opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
