--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   padding: 0;
   box-sizing: border-box;
   color: limegreen;
-  font-family: monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 html {
