--- a/css/projects.css
+++ b/css/projects.css
@@ -130,7 +130,8 @@ header.projects nav #menu-btn {
   margin-bottom: 15px;
   border-radius: 5px;
   overflow: hidden;
-  animation: fade-in-below 0.5s ease forwards;
+  /* this line below causes error on safari */
+  /* animation: fade-in-below 0.5s ease forwards; */
 }
 
 .container .box .dream .card img {
@@ -176,15 +177,6 @@ header.projects nav #menu-btn {
   bottom: calc(40% - 35px);
   opacity: 1;
 }
-
-/* @keyframes fade-in-bottom {
-    0% {
-       bottom: 0;
-    }
-    100% {
-        bottom: 25%;
-    }
-} */
 
 .container .box .dream .card .lower-half button {
   font-size: 24px;
